--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,3 +1,11 @@
+//Variables
+$orange: rgba(255, 188, 103, 1)
+$red: rgba(218, 114, 126, 1)
+$maroon: rgba(172, 108, 130, 1)
+$purple: rgba(104, 92, 121, 1)
+$blue: rgba(69, 92, 123, 1)
+//End of Variables
+
 //SASS Imports
 @import "./base/normalize"
 @import "./base/reset"
