refactored colorConstants to be more functional

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -4,6 +4,7 @@ $red: rgba(218, 114, 126, 1)
 $maroon: rgba(172, 108, 130, 1)
 $purple: rgba(104, 92, 121, 1)
 $blue: rgba(69, 92, 123, 1)
+$black: rgba(93, 93, 93, 1)
 //End of Variables
 
 //SASS Imports
